#227 fix: 수정 - virtual slide 사용에 따른 css 수정 - navbar와 댓글 모달의 z-index 변경

--- a/front/src/components/comment/comment.module.scss
+++ b/front/src/components/comment/comment.module.scss
@@ -7,7 +7,7 @@
   height: 100%;
   overflow: hidden;
   background-color: $white;
-  z-index: 2;
+  z-index: 3;
   .close {
     @include flex;
     justify-content: flex-end;
